src/_scss/_home.scss
body.home {
    #header {
        position: absolute;
        left: 0;
        right: 0;
        background: transparent;
        box-shadow: none;

        a#open-menu {
            &:before,&:after {
                // background: $heroUnitHeadingColor;
            }
        }
        #menu {
            a {
                // color: $heroUnitHeadingColor;
                &:hover {
                    // color: $navbarLinkColorHover;
                }
            }
            &:target {
                a {
                    // color: $navbarLinkColor;
                }
            }
        }
        .brand {
            // filter: invert(0%);
            // color: $navbarLinkColor;
            &:before {
                display: none;
            }
        }
    }
    main,#main {
        padding-top: 0;
    }
    #masthead {
        background: $bodyBackground;
        color: $textColor;
        @media (orientation: landscape) {
            height: (100vh);
        }
        @media (orientation: portrait) {
            height: auto;
            min-height: (68vh);
        }

        figure {
            display: none;
        }

        h1,h2,h3 {
            color: $textBoldColor;
        }
        h1,h2 {
            @media (orientation: portrait) {
                padding-right: 0;
            }
            & > em {
                    background: linear-gradient($_indigo, $_teal, $_pink);
                    background: linear-gradient($brandAccent, $brandColor, $brandComplement);
                    -webkit-background-clip: text;
                    -webkit-text-fill-color: transparent;
                    font-style: normal;
            }
        }
    
        p {
            // @include largeType;
            z-index: 1;
            &:last-of-type {
                z-index: 2;
                margin-bottom: 0;
            }
        }
        .scrollhint {
            @media (orientation: landscape) {
                display: block;
            }
        }

        $iconsize: 13rem;
        h1, p.bio {
            box-sizing: border-box;
            padding-right: calc($iconsize + $spacerHorizontal);
        }
        .crane {
            position: absolute;
            max-width: $gridWidth;
            left: calc((100vw - $gridWidth)/2);
            // margin-top: ($iconsize * -0.5);
            content: "";
            text-align: right;
            filter: invert(34%) sepia(77%) saturate(1900%) hue-rotate(8deg) brightness(98%) contrast(104%);
            img{
                width: auto;
                height: 100%;
                display: inline-block;
            }
            @media (orientation: landscape) {
                // float: right;
                // width: $iconsize;
                height: $iconsize;
                background-size: $iconsize;
                background-position: right center;
            }
            @media (orientation: portrait) {
                position: static;
                $iconsize: 5rem;
                // width: 100%;
                text-align: center;
                height: $iconsize;
            }
        }


        // &:before {
        //     background-repeat: no-repeat;
        //     background-attachment: fixed;
        //     background-size: 100% 100%;

        //     background-color: $brandColor;
        //     background-image:
        //     radial-gradient(ellipse 100% 162% at 62% -19%, $brandAccent 0px, transparent 50%),
        //     radial-gradient(ellipse 200% 81% at 119% 62%, $brandComplement 0px, transparent 50%),
        //     radial-gradient(ellipse 81% 162% at 19% 81%, $brandSecondary 0px, transparent 50%);

        //     content: "";
        //     width: 100%;
        //     height: 100%;
        //     position: absolute;
        //     left: -0vw;
        //     top: -0vh;
        //     z-index: -2;
        // }

        // &:after {
        //     content: "";
        //     background-size: 1000px;
        //     width: 100%;
        //     height: 100%;
        //     position: absolute;
        //     left: 0;
        //     top: 0;
        //     z-index: 0;
        //     filter: url(#noiseFilter) opacity(25%);
        //     transform: translateZ(0);
        // }
    }
    .project-list,.blog {
        padding-top: $spacerVertical;
    }
    .project-list {
        h2 {
            text-align: center;
        }
        .project {
            header p {
                display: none;
            }
            
        }
        @media (orientation: portrait) {
            padding: 0 $spacerHorizontalPhone;
            .project {
                flex: 1 0 100%;
                img {
                    height: 60vw;
                }

            }
        }
    }
    #masthead {
            @media (orientation: landscape) {
                // scroll-snap-align: start;
            }
    }
    footer {
            @media (orientation: landscape) {
                // scroll-snap-align: end;
            }
    }


}

